tests/negative/option/option_generic_mismatch.tx
// EXPECTED: COMPILE_ERROR
// Description: Test generic mismatch with Option types.

function main() {
    let x: Option<int> = 10;
    let y: Option<string> = x; // Error: Option<int> is not compatible with Option<string>
}
